@@ -1,7 +1,7 @@
 
-R Under development (unstable) (2023-05-04 r84393) -- "Unsuffered Consequences"
+R Under development (unstable) (2023-07-31 r84791) -- "Unsuffered Consequences"
 Copyright (C) 2023 The R Foundation for Statistical Computing
-Platform: aarch64-apple-darwin22.4.0 (64-bit)
+Platform: x86_64-pc-linux-gnu
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -3584,15 +3584,15 @@ attr(,"class")
 > ## time-dependent ==> ignore diffs:
 > ## IGNORE_RDIFF_BEGIN
 > pretty(Sys.Date())
-[1] "2023-05-02" "2023-05-03" "2023-05-04" "2023-05-05" "2023-05-06"
-[6] "2023-05-07"
+[1] "2023-07-29" "2023-07-30" "2023-07-31" "2023-08-01" "2023-08-02"
+[6] "2023-08-03"
 > pretty(Sys.time(), n = 10)
- [1] "2023-05-04 11:29:57 BST" "2023-05-04 11:29:58 BST"
- [3] "2023-05-04 11:29:59 BST" "2023-05-04 11:30:00 BST"
- [5] "2023-05-04 11:30:01 BST" "2023-05-04 11:30:02 BST"
- [7] "2023-05-04 11:30:03 BST" "2023-05-04 11:30:04 BST"
- [9] "2023-05-04 11:30:05 BST" "2023-05-04 11:30:06 BST"
-[11] "2023-05-04 11:30:07 BST"
+ [1] "2023-07-31 10:42:05 CEST" "2023-07-31 10:42:06 CEST"
+ [3] "2023-07-31 10:42:07 CEST" "2023-07-31 10:42:08 CEST"
+ [5] "2023-07-31 10:42:09 CEST" "2023-07-31 10:42:10 CEST"
+ [7] "2023-07-31 10:42:11 CEST" "2023-07-31 10:42:12 CEST"
+ [9] "2023-07-31 10:42:13 CEST" "2023-07-31 10:42:14 CEST"
+[11] "2023-07-31 10:42:15 CEST"
 > ## IGNORE_RDIFF_END
 > 
 > pretty(as.Date("2000-03-01")) # R 1.0.0 came in a leap year
@@ -3958,6 +3958,34 @@ v 0.98039216 0.7647059 0.4588235 0.8549020 0.9960784
 > 
 > ## See  help(persp) {after attaching the 'graphics' package}
 > ##      -----------
+> 
+> ## Example for 'continuous = TRUE' (vs default):
+> require(graphics)
+> x <- -10:10/10 # [-1, 1]
+> y <- -16:16/16 # [-1, 1] ==> z = fxy := outer(x,y) is also in [-1,1]
+> 
+> p <- persp(x, y, fxy <- outer(x,y), phi = 20, theta = 15, r = 3, ltheta = -75,
++            shade = 0.8, col = "green3", ticktype = "detailed")
+> ## 5 axis-parallel auxiliary lines in x-y  and y-z planes :
+> lines(trans3d(-.5 , y=-1:1, z=min(fxy),  pmat=p), lty=2)
+> lines(trans3d(  0 , y=-1:1, z=min(fxy),  pmat=p), lty=2)
+> lines(trans3d(-1:1, y= -.7, z=min(fxy),  pmat=p), lty=2)
+> lines(trans3d( -1,  y= -.7, z=c(-1,1) ,  pmat=p), lty=2)
+> lines(trans3d( -1,  y=-1:1, z= -.5    ,  pmat=p), lty=2)
+> ## 2 pillars to carry the horizontals below:
+> lines(trans3d(-.5 , y= -.7, z=c(-1,-.5), pmat=p), lwd=1.5, col="gray10")
+> lines(trans3d( 0  , y= -.7, z=c(-1,-.5), pmat=p), lwd=1.5, col="gray10")
+> ## now some "horizontal rays" (going from center to very left or very right):
+> doHor <- function(x1, x2, z, CNT=FALSE, ...)
++     lines(trans3d(x=seq(x1, x2, by=0.5), y= -0.7, z = z, pmat = p, continuous = CNT),
++           lwd = 3, type="b", xpd=NA, ...)
+> doHor(-10,  0, z = -0.5, col = 2)  # x in [-10, 0] -- to the very left : fine
+> doHor(-.5,  2, z = -0.52,col = 4) # x in [-0.5, 2] only {to the right} --> all fine
+> ## but now, x in [-0.5, 20] -- "too far" ==> "wrap around" problem (without 'continuous=TRUE'):
+> doHor(-.5, 20, z = -0.58, col = "steelblue", lty=2)
+> ## but it is fixed with continuous = CNT = TRUE:
+> doHor(-.5, 20, z = -0.55, CNT=TRUE, col = "skyblue")
+points cut off after point[39]
 > 
 > 
 > 
@@ -4396,7 +4424,7 @@ NULL
 > cleanEx()
 > options(digits = 7L)
 > base::cat("Time elapsed: ", proc.time() - base::get("ptime", pos = 'CheckExEnv'),"\n")
-Time elapsed:  20.995 0.589 21.609 0 0 
+Time elapsed:  38.446 0.619 39.236 0 0 
 > grDevices::dev.off()
 null device 
           1 
